slightly fixed styling on mobile

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -29,11 +29,12 @@ nav p {
 
 #inner {
     list-style-type: none;
-    padding: 0px 0px 0px 0px;
+    padding: 0;
     margin: -55px 0 0 60px;
     width: calc(100% + 300px);
     height: 60px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -42,7 +43,7 @@ nav p {
     font-size: 1em;
     text-decoration: none;
     color: #000000;
-    padding: 0;
+    padding: 0 8px;
 }
 
 #inner li a:hover {
